fix: change back to top style, fix z-index

--- a/src/scss/modules/back-to-top.scss
+++ b/src/scss/modules/back-to-top.scss
@@ -1,23 +1,39 @@
 .back-to-top {
-  height: 100vh;
+  background: rgba(0, 0, 0, 0.15);
+  border: none;
+  border-top-left-radius: 1rem;
+  bottom: 0;
+  cursor: pointer;
+  padding: 1rem;
   position: fixed;
-  width: 100%;
+  right: 0;
+  transition: all .15s ease-in-out;
+  width: 6rem;
   z-index: 100;
-  &__button {
-    background: rgba(0, 0, 0, .6);
-    border: none;
-    bottom: 2rem;
-    cursor: pointer;
-    height: 5rem;
-    padding: .5rem;
-    position: absolute;
-    right: 2rem;
-    width: 5rem;
-    z-index: 100;
-  }
   &__arrow {
     fill: none;
-    stroke-width: 4;
+    stroke-width: 5;
     stroke: $primary;
   }
+}
+
+@media (min-width: 768px) {
+  .back-to-top {
+    background: rgba(0, 0, 0, 0.6);
+    border-bottom-left-radius: 1rem;
+    bottom: 2rem;
+    right: 0;
+    width: 5rem;
+    &:hover {
+      background: rgba(0, 0, 0, 0.8);
+      transform: translateY(-.75rem);
+    }
+  }
+}
+
+@media (min-width: 1366px) {
+    .back-to-top {
+        bottom: 3.5rem;
+        width: 7rem;
+    }
 }
