--- a/src/scss/modules/news.scss
+++ b/src/scss/modules/news.scss
@@ -6,6 +6,7 @@
   box-shadow: $bottom-shadow;
   padding: $outter-mobile;
   position: relative;
+  z-index: 0;
   &__shadow {
     background: linear-gradient(
       180deg,
